k8s/applications/ai/karakeep/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
    io.cilium/lb-ipam-ips: 10.25.150.230
spec:
  selector:
    app: karakeep-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
